JM_lab2_v6_k8s/l2-deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l2-dep-app-v6
  labels:
    app: l2-app-v6
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: l2-mc-app-v6
  template:
    metadata: 
      labels:
        app: l2-mc-app-v6
    spec:
      containers:
        - name: l2-app-v6
          image: l2-multiapp-v6:v6
          imagePullPolicy: Never
          ports:
            - containerPort: 80
