JM_lab2_v6_k8s/l2-mssql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: l2-mssql-service
spec:
  selector:
    app: l2-mssql
  type: NodePort  
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
