JM_lab2_v6_k8s/l2-service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: l2-service-api-v6
spec:
  type: NodePort
  selector:
    app: l2-mc-api-v6
  ports:
    - port: 8080
      targetPort: 80
