JM_lab2_v6_k8s/l2-service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: l2-service-app-v6
spec:
  type: NodePort
  selector:
    app: l2-mc-app-v6
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
